--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Chronology</title>
 </head>
 <body>
     <section class="section">
         <div class="container">
+
             <div id="astronomy">
-                <h1 id="area"></h1>
-                <div id="astronomy-items"></div>
+                <h1 id="area" class="subtitle is-3">
+                    <progress class="progress is-small is-primary" max="100">15%</progress>
+                </h1>
+                <div id="astronomy-items" class=""></div>
             </div>
         
             <div id="weather">
@@ -21,6 +24,7 @@
             <div id="critical-alerts">
         
             </div>
+
         </div>
     </section>
 </body>
